--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <h1 id="hourDigit" class="digits" style="color: red;">00</h1>
                 <h1 id="minuteDigit" class="digits" style="color: yellow;">00</h1>
                 <h1 id="secondDigit" class="digits" style="color: greenyellow;">00</h1>
+                <span style="position: absolute;" id="span_1">:</span>
+                <span style="position: absolute;" id="span_2">:</span>
             </div>
         </div>
         <div id="ampmFrame">
