--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock | SVG Styled</title>
-    <style>*{padding: 0;margin: 0;box-sizing: border-box;}</style>
+    <style>*{padding: 0;margin: 0;box-sizing: border-box;user-select: none;-webkit-user-drag: none;}</style>
     <link rel="stylesheet" href="style.css">
     <script src="node.js" defer></script>
 </head>
