--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock | SVG Styled</title>
     <style>*{padding: 0;margin: 0;box-sizing: border-box;user-select: none;-webkit-user-drag: none;}</style>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="node.js" defer></script>
 </head>
